--- a/TrabajadoresFinish/appsettings.json
+++ b/TrabajadoresFinish/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "AzureConnection": "Server=myper.brazilsouth.cloudapp.azure.com;Initial Catalog=TrabajadoresPrueba;Persist Security Info=False;User ID=MYPER;Password=MyperSac$2021;MultipleActiveResultSets=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
