--- a/TrabajadoresFinish/TrabajadoresFinish.csproj
+++ b/TrabajadoresFinish/TrabajadoresFinish.csproj
@@ -8,4 +8,29 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'https' " />
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
+  <ItemGroup>
+    <None Remove="Models\" />
+    <None Remove="Data\" />
+    <None Remove="Views\Departamentos\" />
+    <None Remove="Views\Distritos\" />
+    <None Remove="Views\Provincias\" />
+    <None Remove="Views\Trabajadores\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Data\" />
+    <Folder Include="Views\Departamentos\" />
+    <Folder Include="Views\Distritos\" />
+    <Folder Include="Views\Provincias\" />
+    <Folder Include="Views\Trabajadores\" />
+    <Folder Include="Views\Provincias\" />
+    <Folder Include="Views\Distritos\" />
+    <Folder Include="Views\Trabajadores\" />
+  </ItemGroup>
+
+    <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.16" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.16" />
+  </ItemGroup>
 </Project>
